fixed the contrast on the skip to content link

--- a/wp-content/themes/mojintranet/assets/css/src/ie/_header.scss
+++ b/wp-content/themes/mojintranet/assets/css/src/ie/_header.scss
@@ -1,3 +1,9 @@
 .lte-ie7 .header {
   z-index: 1;
+
+  .skip-to-content-container a {
+    display: inline;
+    zoom: 1;
+    background-color: $yellow;
+  }
 }
